tests/errors/cpp/expand/call-zeroargs-missing-parentheses.h
#define EXPANDME1() void f(void);

// Missing "()"
EXPANDME1
